added a consolelogdata and styling to header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,14 @@
+#headerRow {
+  background: #2b2a28;
+  margin-bottom: 20px;
+}
+
 #header {
-    height: 200px;
+  height: 90px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .main {
