--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+.container {
+  max-width: 90vw;
+}
+
 #headerRow {
   background: #2b2a28;
   margin-bottom: 20px;
@@ -12,7 +16,7 @@
 }
 
 .main {
-    height: 500px;
+    height: 400px;
 }
 
 footer {
@@ -49,6 +53,8 @@ input {
     background-color: lightgray;
     color: black;
     padding: 16px;
+    margin-top: 8px;
+    margin-bottom: 8px;
     font-size: 16px;
     border: none;
     cursor: pointer;
@@ -64,9 +70,11 @@ input {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
+    width: 100%;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    text-align: center;
   }
   
   .dropdown-content a {
